--- a/spamassassin/po/es/untangle-node-spamassassin.po
+++ b/spamassassin/po/es/untangle-node-spamassassin.po
@@ -17,6 +17,353 @@ msgstr ""
 "X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Spanish\n"
 
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:96
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:98
+msgid "Mark"
+msgstr "Marcar"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:96
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:98
+msgid "Pass"
+msgstr "Permitir"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:97
+msgid "Drop"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:97
+msgid "Quarantine"
+msgstr "Cuarentena"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:99
+#, fuzzy
+msgid "Low (Threshold: 5.0)"
+msgstr "Bajo (Intensidad: 5.0)"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:99
+#, fuzzy
+msgid "Medium (Threshold: 4.3)"
+msgstr "Medio (Intensidad: 4.3)"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:99
+#, fuzzy
+msgid "High (Threshold: 3.5)"
+msgstr "Alto (Intensidad: 3.5)"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:100
+#, fuzzy
+msgid "Very High (Threshold: 3.3)"
+msgstr "Muy Alto (Intensidad: 3.3)"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:100
+#, fuzzy
+msgid "Extreme (Threshold: 3.0)"
+msgstr "Extremo (Intensidad: 3.0)"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:100
+msgid "Custom"
+msgstr "Personalizada"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:103
+msgid "Email"
+msgstr "Email"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:115
+msgid "SMTP"
+msgstr "SMTP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:121
+msgid "Scan SMTP"
+msgstr "Analizar SMTP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:168
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:492
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:664
+msgid "Strength"
+msgstr "Resistencia"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:196
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:520
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:692
+msgid "Strength Value"
+msgstr "Valor de resistencia"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:204
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:528
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:700
+msgid "Strength Value must be a number. Smaller value is higher strength."
+msgstr ""
+"El valor de resistencia debe ser un número. Cuanto menor el número, tanto "
+"mayor el grado de resistencia."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:227
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:550
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:723
+msgid "Action"
+msgstr "Medida"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:255
+#, fuzzy
+msgid "Drop Super Spam"
+msgstr "Super Bloqueo de Spam"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:284
+msgid "Super Spam Threshold"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:322
+msgid "Advanced SMTP Configuration"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:333
+#, fuzzy
+msgid "Enable tarpitting"
+msgstr "Activar el bloqueo SMPT de correo basura"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:346
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:579
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:751
+msgid "Add email headers"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:359
+msgid "Close connection on scan failure"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:372
+msgid "Scan outbound (WAN) SMTP"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:384
+msgid "CPU Load Limit"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:390
+msgid "Value must be a float."
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:402
+msgid "Concurrent Scan Limit"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:408
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:426
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:597
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:769
+msgid "Value must be a integer."
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:420
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:591
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:763
+msgid "Message Size Limit"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:440
+msgid "POP3"
+msgstr "POP3"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:446
+msgid "Scan POP3"
+msgstr "Analizar POP3"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:568
+msgid "Advanced POP Configuration"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:611
+msgid "IMAP"
+msgstr "IMAP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:617
+msgid "Scan IMAP"
+msgstr "Analizar IMAP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:740
+msgid "Advanced IMAP Configuration"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:783
+msgid "Note"
+msgstr "Nota"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:786
+msgid "Spam Blocker was last updated"
+msgstr "Última actualización de Spam Blocker"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:789
+msgid "unknown"
+msgstr "desconocido"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:811
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:821
+msgid "pass message"
+msgstr "permitir mensaje"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:813
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:823
+#, fuzzy
+msgid "mark message"
+msgstr "permitir mensaje"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:815
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:833
+#, fuzzy
+msgid "unknown action"
+msgstr "desconocido"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:825
+#, fuzzy
+msgid "drop message"
+msgstr "permitir mensaje"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:827
+msgid "quarantine message"
+msgstr "poner mensaje en cuarentena"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:829
+msgid "safelist message"
+msgstr "mensaje de lista segura"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:831
+#, fuzzy
+msgid "pass oversize message"
+msgstr "mensaje por encima del tamaño aceptado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:865
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:940
+msgid "timestamp"
+msgstr "fecha y hora"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:873
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:948
+msgid "action"
+msgstr "medida"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:878
+msgid "client"
+msgstr "cliente"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:883
+msgid "subject"
+msgstr "asunto"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:888
+msgid "receiver"
+msgstr "receptor"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:893
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:953
+msgid "sender"
+msgstr "remitente"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:898
+#, fuzzy
+msgid "spam score"
+msgstr "Valor de correo basura"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:903
+msgid "server"
+msgstr "servidor"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:917
+msgid "Tarpit Event Log"
+msgstr "Log de eventos de bloqueo de correo basura"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:927
+msgid "skipped"
+msgstr "saltado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:927
+msgid "blocked"
+msgstr "bloqueado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:958
+msgid "DNSBL server"
+msgstr "Servidor DNSBL"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:972
+msgid "Failed"
+msgstr "Falló"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:972
+msgid "The value of Strength Value field is invalid."
+msgstr "El campo Valor de resistencia contiene un valor no válido."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:984
+msgid "Saving..."
+msgstr "Guardando..."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:984
+msgid "Please wait"
+msgstr "Espere"
+
+#: ../../spam-base/impl/com/untangle/node/spam/RBLAllFilter.java:27
+#: ../../spam-base/impl/com/untangle/node/spam/SpamAllFilter.java:27
+msgid "All Events"
+msgstr "Todos los eventos"
+
+#: ../../spam-base/impl/com/untangle/node/spam/RBLSkippedFilter.java:27
+msgid "Skipped Events"
+msgstr "Eventos saltados"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamLogFilter.java:27
+msgid "POP/IMAP Events"
+msgstr "Sucesos POP/IMAP"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:124
+msgid "Messages passed"
+msgstr "Mensajes permitidos"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:124
+msgid "PASS"
+msgstr "PERMITIR"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:125
+#, fuzzy
+msgid "Messages dropped"
+msgstr "Mensajes permitidos"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:125
+msgid "DROP"
+msgstr ""
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:126
+msgid "Messages marked"
+msgstr "Mensajes marcados"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:126
+msgid "MARK"
+msgstr "MARCAR"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:127
+msgid "Messages quarantined"
+msgstr "Mensajes en cuarentena"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:127
+msgid "QUARANTINE"
+msgstr "CUARENTENA"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:128
+msgid "Spam detected"
+msgstr "Correo basura detectado"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:129
+msgid "Messages received"
+msgstr "Mensajes recibidos"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamSmtpFilter.java:27
+msgid "SMTP Events"
+msgstr "Sucesos SMTP"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:27
+msgid "Spam Events"
+msgstr "Eventos de correo basura"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:29
+msgid "Identity Theft Events"
+msgstr "Eventos de robo de identidad"
+
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_spamassassin.py:23
 msgid "spam"
 msgstr ""
@@ -37,200 +384,6 @@ msgstr ""
 #, fuzzy
 msgid "Top Ten Spammed"
 msgstr "Super Bloqueo de Spam"
-
-#~ msgid "Mark"
-#~ msgstr "Marcar"
-
-#~ msgid "Pass"
-#~ msgstr "Permitir"
-
-#~ msgid "Quarantine"
-#~ msgstr "Cuarentena"
-
-#, fuzzy
-#~ msgid "Low (Threshold: 5.0)"
-#~ msgstr "Bajo (Intensidad: 5.0)"
-
-#, fuzzy
-#~ msgid "Medium (Threshold: 4.3)"
-#~ msgstr "Medio (Intensidad: 4.3)"
-
-#, fuzzy
-#~ msgid "High (Threshold: 3.5)"
-#~ msgstr "Alto (Intensidad: 3.5)"
-
-#, fuzzy
-#~ msgid "Very High (Threshold: 3.3)"
-#~ msgstr "Muy Alto (Intensidad: 3.3)"
-
-#, fuzzy
-#~ msgid "Extreme (Threshold: 3.0)"
-#~ msgstr "Extremo (Intensidad: 3.0)"
-
-#~ msgid "Custom"
-#~ msgstr "Personalizada"
-
-#~ msgid "Email"
-#~ msgstr "Email"
-
-#~ msgid "SMTP"
-#~ msgstr "SMTP"
-
-#~ msgid "Scan SMTP"
-#~ msgstr "Analizar SMTP"
-
-#~ msgid "Strength"
-#~ msgstr "Resistencia"
-
-#~ msgid "Strength Value"
-#~ msgstr "Valor de resistencia"
-
-#~ msgid "Strength Value must be a number. Smaller value is higher strength."
-#~ msgstr ""
-#~ "El valor de resistencia debe ser un número. Cuanto menor el número, tanto "
-#~ "mayor el grado de resistencia."
-
-#~ msgid "Action"
-#~ msgstr "Medida"
-
-#, fuzzy
-#~ msgid "Enable tarpitting"
-#~ msgstr "Activar el bloqueo SMPT de correo basura"
-
-#~ msgid "POP3"
-#~ msgstr "POP3"
-
-#~ msgid "Scan POP3"
-#~ msgstr "Analizar POP3"
-
-#~ msgid "IMAP"
-#~ msgstr "IMAP"
-
-#~ msgid "Scan IMAP"
-#~ msgstr "Analizar IMAP"
-
-#~ msgid "Note"
-#~ msgstr "Nota"
-
-#~ msgid "Spam Blocker was last updated"
-#~ msgstr "Última actualización de Spam Blocker"
-
-#~ msgid "unknown"
-#~ msgstr "desconocido"
-
-#~ msgid "pass message"
-#~ msgstr "permitir mensaje"
-
-#, fuzzy
-#~ msgid "mark message"
-#~ msgstr "permitir mensaje"
-
-#, fuzzy
-#~ msgid "drop message"
-#~ msgstr "permitir mensaje"
-
-#~ msgid "quarantine message"
-#~ msgstr "poner mensaje en cuarentena"
-
-#~ msgid "safelist message"
-#~ msgstr "mensaje de lista segura"
-
-#~ msgid "oversize message"
-#~ msgstr "mensaje por encima del tamaño aceptado"
-
-#~ msgid "timestamp"
-#~ msgstr "fecha y hora"
-
-#~ msgid "action"
-#~ msgstr "medida"
-
-#~ msgid "client"
-#~ msgstr "cliente"
-
-#~ msgid "subject"
-#~ msgstr "asunto"
-
-#~ msgid "receiver"
-#~ msgstr "receptor"
-
-#~ msgid "sender"
-#~ msgstr "remitente"
-
-#~ msgid "SPAM score"
-#~ msgstr "Valor de correo basura"
-
-#~ msgid "server"
-#~ msgstr "servidor"
-
-#~ msgid "Tarpit Event Log"
-#~ msgstr "Log de eventos de bloqueo de correo basura"
-
-#~ msgid "skipped"
-#~ msgstr "saltado"
-
-#~ msgid "blocked"
-#~ msgstr "bloqueado"
-
-#~ msgid "DNSBL server"
-#~ msgstr "Servidor DNSBL"
-
-#~ msgid "Failed"
-#~ msgstr "Falló"
-
-#~ msgid "The value of Strength Value field is invalid."
-#~ msgstr "El campo Valor de resistencia contiene un valor no válido."
-
-#~ msgid "Saving..."
-#~ msgstr "Guardando..."
-
-#~ msgid "Please wait"
-#~ msgstr "Espere"
-
-#~ msgid "All Events"
-#~ msgstr "Todos los eventos"
-
-#~ msgid "Skipped Events"
-#~ msgstr "Eventos saltados"
-
-#~ msgid "POP/IMAP Events"
-#~ msgstr "Sucesos POP/IMAP"
-
-#~ msgid "Messages passed"
-#~ msgstr "Mensajes permitidos"
-
-#~ msgid "PASS"
-#~ msgstr "PERMITIR"
-
-#, fuzzy
-#~ msgid "Messages dropped"
-#~ msgstr "Mensajes permitidos"
-
-#~ msgid "Messages marked"
-#~ msgstr "Mensajes marcados"
-
-#~ msgid "MARK"
-#~ msgstr "MARCAR"
-
-#~ msgid "Messages quarantined"
-#~ msgstr "Mensajes en cuarentena"
-
-#~ msgid "QUARANTINE"
-#~ msgstr "CUARENTENA"
-
-#~ msgid "Spam detected"
-#~ msgstr "Correo basura detectado"
-
-#~ msgid "Messages received"
-#~ msgstr "Mensajes recibidos"
-
-#~ msgid "SMTP Events"
-#~ msgstr "Sucesos SMTP"
-
-#~ msgid "Spam Events"
-#~ msgstr "Eventos de correo basura"
-
-#~ msgid "Identity Theft Events"
-#~ msgstr "Eventos de robo de identidad"
 
 #~ msgid "Block"
 #~ msgstr "Bloquear"
