--- a/spamassassin/po/pt_BR/untangle-node-spamassassin.po
+++ b/spamassassin/po/pt_BR/untangle-node-spamassassin.po
@@ -17,6 +17,348 @@ msgstr ""
 "X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Portuguese\n"
 
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:96
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:98
+msgid "Mark"
+msgstr "Marcar"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:96
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:98
+msgid "Pass"
+msgstr "Permitir"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:97
+msgid "Drop"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:97
+msgid "Quarantine"
+msgstr "Quarentena"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:99
+msgid "Low (Threshold: 5.0)"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:99
+msgid "Medium (Threshold: 4.3)"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:99
+msgid "High (Threshold: 3.5)"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:100
+msgid "Very High (Threshold: 3.3)"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:100
+msgid "Extreme (Threshold: 3.0)"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:100
+msgid "Custom"
+msgstr "Personalizada"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:103
+msgid "Email"
+msgstr "E-mail"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:115
+msgid "SMTP"
+msgstr "SMTP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:121
+msgid "Scan SMTP"
+msgstr "Varrer SMTP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:168
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:492
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:664
+msgid "Strength"
+msgstr "Intensidade"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:196
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:520
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:692
+msgid "Strength Value"
+msgstr "Valor de intensidade"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:204
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:528
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:700
+msgid "Strength Value must be a number. Smaller value is higher strength."
+msgstr ""
+"O valor de intensidade deve ser um número. Valor menor significa intensidade "
+"maior."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:227
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:550
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:723
+msgid "Action"
+msgstr "Ação"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:255
+msgid "Drop Super Spam"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:284
+msgid "Super Spam Threshold"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:322
+msgid "Advanced SMTP Configuration"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:333
+#, fuzzy
+msgid "Enable tarpitting"
+msgstr "Habilitar SMTP tarpitting"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:346
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:579
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:751
+msgid "Add email headers"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:359
+msgid "Close connection on scan failure"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:372
+msgid "Scan outbound (WAN) SMTP"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:384
+msgid "CPU Load Limit"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:390
+msgid "Value must be a float."
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:402
+msgid "Concurrent Scan Limit"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:408
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:426
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:597
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:769
+msgid "Value must be a integer."
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:420
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:591
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:763
+msgid "Message Size Limit"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:440
+msgid "POP3"
+msgstr "POP3"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:446
+msgid "Scan POP3"
+msgstr "Varrer POP3"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:568
+msgid "Advanced POP Configuration"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:611
+msgid "IMAP"
+msgstr "IMAP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:617
+msgid "Scan IMAP"
+msgstr "Varrer IMAP"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:740
+msgid "Advanced IMAP Configuration"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:783
+msgid "Note"
+msgstr "Nota"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:786
+msgid "Spam Blocker was last updated"
+msgstr "O Spam Blocker foi atualizado por último em"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:789
+msgid "unknown"
+msgstr "desconhecido"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:811
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:821
+msgid "pass message"
+msgstr "permitir mensagem"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:813
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:823
+#, fuzzy
+msgid "mark message"
+msgstr "permitir mensagem"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:815
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:833
+#, fuzzy
+msgid "unknown action"
+msgstr "desconhecido"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:825
+#, fuzzy
+msgid "drop message"
+msgstr "permitir mensagem"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:827
+msgid "quarantine message"
+msgstr "mensagem de quarentena"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:829
+#, fuzzy
+msgid "safelist message"
+msgstr "permitir mensagem"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:831
+#, fuzzy
+msgid "pass oversize message"
+msgstr "permitir mensagem"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:865
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:940
+msgid "timestamp"
+msgstr "marcação de horário"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:873
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:948
+msgid "action"
+msgstr "ação"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:878
+msgid "client"
+msgstr "cliente"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:883
+msgid "subject"
+msgstr "assunto"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:888
+msgid "receiver"
+msgstr "destinatário"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:893
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:953
+msgid "sender"
+msgstr "remetente"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:898
+#, fuzzy
+msgid "spam score"
+msgstr "pontuação de SPAM"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:903
+msgid "server"
+msgstr "servidor"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:917
+msgid "Tarpit Event Log"
+msgstr "Registro de evento tarpit"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:927
+msgid "skipped"
+msgstr "ignorado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:927
+msgid "blocked"
+msgstr "bloqueado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:958
+msgid "DNSBL server"
+msgstr "Servidor DNSBL"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:972
+msgid "Failed"
+msgstr "Falha"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:972
+msgid "The value of Strength Value field is invalid."
+msgstr "O valor do campo 'Valor de intensidade' é inválido."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:984
+msgid "Saving..."
+msgstr "Salvando..."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:984
+msgid "Please wait"
+msgstr "Aguarde"
+
+#: ../../spam-base/impl/com/untangle/node/spam/RBLAllFilter.java:27
+#: ../../spam-base/impl/com/untangle/node/spam/SpamAllFilter.java:27
+msgid "All Events"
+msgstr "Todos os eventos"
+
+#: ../../spam-base/impl/com/untangle/node/spam/RBLSkippedFilter.java:27
+msgid "Skipped Events"
+msgstr "Eventos ignorados"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamLogFilter.java:27
+msgid "POP/IMAP Events"
+msgstr "Eventos POP/IMAP"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:124
+msgid "Messages passed"
+msgstr "Mensagens permitidas"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:124
+msgid "PASS"
+msgstr "PERMITIR"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:125
+#, fuzzy
+msgid "Messages dropped"
+msgstr "Mensagens permitidas"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:125
+msgid "DROP"
+msgstr ""
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:126
+msgid "Messages marked"
+msgstr "Mensagens marcadas"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:126
+msgid "MARK"
+msgstr "MARCAR"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:127
+msgid "Messages quarantined"
+msgstr "Mensagens em quarentena"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:127
+msgid "QUARANTINE"
+msgstr "QUARENTENA"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:128
+msgid "Spam detected"
+msgstr "Spam detectado"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamNodeImpl.java:129
+msgid "Messages received"
+msgstr "Mensagens recebidas"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamSmtpFilter.java:27
+msgid "SMTP Events"
+msgstr "Eventos SMTP"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:27
+msgid "Spam Events"
+msgstr "Eventos de Spam"
+
+#: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:29
+msgid "Identity Theft Events"
+msgstr "Eventos de roubo de identidade"
+
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_spamassassin.py:23
 msgid "spam"
 msgstr ""
@@ -36,174 +378,6 @@ msgstr ""
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_spamassassin.py:23
 msgid "Top Ten Spammed"
 msgstr ""
-
-#~ msgid "Mark"
-#~ msgstr "Marcar"
-
-#~ msgid "Pass"
-#~ msgstr "Permitir"
-
-#~ msgid "Quarantine"
-#~ msgstr "Quarentena"
-
-#~ msgid "Custom"
-#~ msgstr "Personalizada"
-
-#~ msgid "Email"
-#~ msgstr "E-mail"
-
-#~ msgid "SMTP"
-#~ msgstr "SMTP"
-
-#~ msgid "Scan SMTP"
-#~ msgstr "Varrer SMTP"
-
-#~ msgid "Strength"
-#~ msgstr "Intensidade"
-
-#~ msgid "Strength Value"
-#~ msgstr "Valor de intensidade"
-
-#~ msgid "Strength Value must be a number. Smaller value is higher strength."
-#~ msgstr ""
-#~ "O valor de intensidade deve ser um número. Valor menor significa "
-#~ "intensidade maior."
-
-#~ msgid "Action"
-#~ msgstr "Ação"
-
-#, fuzzy
-#~ msgid "Enable tarpitting"
-#~ msgstr "Habilitar SMTP tarpitting"
-
-#~ msgid "POP3"
-#~ msgstr "POP3"
-
-#~ msgid "Scan POP3"
-#~ msgstr "Varrer POP3"
-
-#~ msgid "IMAP"
-#~ msgstr "IMAP"
-
-#~ msgid "Scan IMAP"
-#~ msgstr "Varrer IMAP"
-
-#~ msgid "Note"
-#~ msgstr "Nota"
-
-#~ msgid "Spam Blocker was last updated"
-#~ msgstr "O Spam Blocker foi atualizado por último em"
-
-#~ msgid "unknown"
-#~ msgstr "desconhecido"
-
-#~ msgid "pass message"
-#~ msgstr "permitir mensagem"
-
-#, fuzzy
-#~ msgid "mark message"
-#~ msgstr "permitir mensagem"
-
-#, fuzzy
-#~ msgid "drop message"
-#~ msgstr "permitir mensagem"
-
-#~ msgid "quarantine message"
-#~ msgstr "mensagem de quarentena"
-
-#~ msgid "timestamp"
-#~ msgstr "marcação de horário"
-
-#~ msgid "action"
-#~ msgstr "ação"
-
-#~ msgid "client"
-#~ msgstr "cliente"
-
-#~ msgid "subject"
-#~ msgstr "assunto"
-
-#~ msgid "receiver"
-#~ msgstr "destinatário"
-
-#~ msgid "sender"
-#~ msgstr "remetente"
-
-#~ msgid "SPAM score"
-#~ msgstr "pontuação de SPAM"
-
-#~ msgid "server"
-#~ msgstr "servidor"
-
-#~ msgid "Tarpit Event Log"
-#~ msgstr "Registro de evento tarpit"
-
-#~ msgid "skipped"
-#~ msgstr "ignorado"
-
-#~ msgid "blocked"
-#~ msgstr "bloqueado"
-
-#~ msgid "DNSBL server"
-#~ msgstr "Servidor DNSBL"
-
-#~ msgid "Failed"
-#~ msgstr "Falha"
-
-#~ msgid "The value of Strength Value field is invalid."
-#~ msgstr "O valor do campo 'Valor de intensidade' é inválido."
-
-#~ msgid "Saving..."
-#~ msgstr "Salvando..."
-
-#~ msgid "Please wait"
-#~ msgstr "Aguarde"
-
-#~ msgid "All Events"
-#~ msgstr "Todos os eventos"
-
-#~ msgid "Skipped Events"
-#~ msgstr "Eventos ignorados"
-
-#~ msgid "POP/IMAP Events"
-#~ msgstr "Eventos POP/IMAP"
-
-#~ msgid "Messages passed"
-#~ msgstr "Mensagens permitidas"
-
-#~ msgid "PASS"
-#~ msgstr "PERMITIR"
-
-#, fuzzy
-#~ msgid "Messages dropped"
-#~ msgstr "Mensagens permitidas"
-
-#~ msgid "Messages marked"
-#~ msgstr "Mensagens marcadas"
-
-#~ msgid "MARK"
-#~ msgstr "MARCAR"
-
-#~ msgid "Messages quarantined"
-#~ msgstr "Mensagens em quarentena"
-
-#~ msgid "QUARANTINE"
-#~ msgstr "QUARENTENA"
-
-#~ msgid "Spam detected"
-#~ msgstr "Spam detectado"
-
-#~ msgid "Messages received"
-#~ msgstr "Mensagens recebidas"
-
-#~ msgid "SMTP Events"
-#~ msgstr "Eventos SMTP"
-
-#~ msgid "Spam Events"
-#~ msgstr "Eventos de Spam"
-
-#~ msgid "Identity Theft Events"
-#~ msgstr "Eventos de roubo de identidade"
 
 #~ msgid "Block"
 #~ msgstr "Bloquear"
